# similarity_score

./: pyproject.toml
notebooks/: similarity_score.ipynb
