[tool.poetry]
name = "similarity-score"
version = "0.1.0"
description = ""
authors = ["aurelien.davodet <aurelien.davodet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
sentence-transformers = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
